--- a/explore.ipynb
+++ b/explore.ipynb
@@ -301,6 +301,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "663f86db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_str = [\n",
+    "    \"datalog/BRCG/SLS30I614/2025121212/2025121212.txt.gz\",\n",
+    "    \"datalog/BRCG/SLS30I614/2025121212/2025121212.txt.gz\",\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ea95293",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"['s3://smartdbucket/datalog/BRCG/SLS30I614/2025121212/2025121212.txt.gz', 'datalog/BRCG/SLS30I614/2025121212/2025121212.txt.gz']\""
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bucket_name = \"smartdbucket\"\n",
+    "s3key_list_string = (\n",
+    "    f\"['s3://{bucket_name}/\" + \"', 's3://{bucket_name}/\".join(test_str) + \"']\"\n",
+    ")\n",
+    "s3key_list_string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "882be9a6",
    "metadata": {},
    "outputs": [
