--- a/explore.ipynb
+++ b/explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "abd2ae5d",
    "metadata": {},
    "outputs": [],
@@ -12,14 +12,14 @@
     "\n",
     "import duckdb\n",
     "import boto3\n",
-    "import plotly.express as px\n",
-    "import polars as pl\n",
-    "import s3fs"
+    "# import plotly.express as px\n",
+    "# import polars as pl\n",
+    "# import s3fs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "22cb7f7f",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "422a0884",
    "metadata": {},
    "outputs": [],
@@ -171,22 +171,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "8e8df9bb",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'main_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[23]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mdel\u001b[39;00m \u001b[43mmain_df\u001b[49m\n",
-      "\u001b[31mNameError\u001b[39m: name 'main_df' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "del main_df"
    ]
@@ -196,23 +184,7 @@
    "execution_count": null,
    "id": "4d81e9bd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SLS30I009 unit has : 72595 rows\n",
-      "DataFrame variable is not defined.\n",
-      "SLS30I015 unit has : 61755 rows\n",
-      "SLS30I016 unit has : 73793 rows\n",
-      "SLS30I039 unit has : 119338 rows\n",
-      "SLS30I146 unit has : 72103 rows\n",
-      "SLS30I477 unit has : 40564 rows\n",
-      "SDLIR038 unit has : 82489 rows\n",
-      "SLS30I623 unit has : 91668 rows\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "hivehour = \"2025121*\"\n",
     "with duckdb.connect() as conn:\n",
@@ -240,60 +212,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "c026f3e6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div><style>\n",
-       ".dataframe > thead > tr,\n",
-       ".dataframe > tbody > tr {\n",
-       "  text-align: right;\n",
-       "  white-space: pre-wrap;\n",
-       "}\n",
-       "</style>\n",
-       "<small>shape: (91_668, 8)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>datetime_wita</th><th>heartbeat</th><th>unitno</th><th>deviceid</th><th>gpsspeed</th><th>gpsnumsat</th><th>VehicleSpeed</th><th>speedsource</th></tr><tr><td>datetime[μs]</td><td>i64</td><td>str</td><td>str</td><td>f64</td><td>i64</td><td>i64</td><td>str</td></tr></thead><tbody><tr><td>2025-12-10 08:00:00</td><td>1765332618</td><td>&quot;LD783&quot;</td><td>&quot;SLS30I623&quot;</td><td>0.813028</td><td>6</td><td>1</td><td>&quot;GPS&quot;</td></tr><tr><td>2025-12-10 08:00:00</td><td>1765332619</td><td>&quot;LD783&quot;</td><td>&quot;SLS30I623&quot;</td><td>0.6482</td><td>6</td><td>1</td><td>&quot;GPS&quot;</td></tr><tr><td>2025-12-10 08:00:00</td><td>1765332621</td><td>&quot;LD783&quot;</td><td>&quot;SLS30I623&quot;</td><td>0.56486</td><td>7</td><td>1</td><td>&quot;GPS&quot;</td></tr><tr><td>2025-12-10 08:00:00</td><td>1765332634</td><td>&quot;LD783&quot;</td><td>&quot;SLS30I623&quot;</td><td>1.263064</td><td>7</td><td>1</td><td>&quot;GPS&quot;</td></tr><tr><td>2025-12-10 08:00:00</td><td>1765332635</td><td>&quot;LD783&quot;</td><td>&quot;SLS30I623&quot;</td><td>1.263064</td><td>7</td><td>1</td><td>&quot;GPS&quot;</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>2025-12-14 08:00:00</td><td>1765673940</td><td>&quot;LD783&quot;</td><td>&quot;SLS30I623&quot;</td><td>3.765116</td><td>9</td><td>4</td><td>&quot;CANBus&quot;</td></tr><tr><td>2025-12-14 08:00:00</td><td>1765673941</td><td>&quot;LD783&quot;</td><td>&quot;SLS30I623&quot;</td><td>3.765116</td><td>9</td><td>4</td><td>&quot;CANBus&quot;</td></tr><tr><td>2025-12-14 08:00:00</td><td>1765673942</td><td>&quot;LD783&quot;</td><td>&quot;SLS30I623&quot;</td><td>3.679924</td><td>9</td><td>3</td><td>&quot;CANBus&quot;</td></tr><tr><td>2025-12-14 08:00:00</td><td>1765673943</td><td>&quot;LD783&quot;</td><td>&quot;SLS30I623&quot;</td><td>3.226184</td><td>9</td><td>2</td><td>&quot;CANBus&quot;</td></tr><tr><td>2025-12-14 08:00:00</td><td>1765673944</td><td>&quot;LD783&quot;</td><td>&quot;SLS30I623&quot;</td><td>1.627908</td><td>9</td><td>2</td><td>&quot;CANBus&quot;</td></tr></tbody></table></div>"
-      ],
-      "text/plain": [
-       "shape: (91_668, 8)\n",
-       "┌─────────────┬────────────┬────────┬───────────┬──────────┬───────────┬─────────────┬─────────────┐\n",
-       "│ datetime_wi ┆ heartbeat  ┆ unitno ┆ deviceid  ┆ gpsspeed ┆ gpsnumsat ┆ VehicleSpee ┆ speedsource │\n",
-       "│ ta          ┆ ---        ┆ ---    ┆ ---       ┆ ---      ┆ ---       ┆ d           ┆ ---         │\n",
-       "│ ---         ┆ i64        ┆ str    ┆ str       ┆ f64      ┆ i64       ┆ ---         ┆ str         │\n",
-       "│ datetime[μs ┆            ┆        ┆           ┆          ┆           ┆ i64         ┆             │\n",
-       "│ ]           ┆            ┆        ┆           ┆          ┆           ┆             ┆             │\n",
-       "╞═════════════╪════════════╪════════╪═══════════╪══════════╪═══════════╪═════════════╪═════════════╡\n",
-       "│ 2025-12-10  ┆ 1765332618 ┆ LD783  ┆ SLS30I623 ┆ 0.813028 ┆ 6         ┆ 1           ┆ GPS         │\n",
-       "│ 08:00:00    ┆            ┆        ┆           ┆          ┆           ┆             ┆             │\n",
-       "│ 2025-12-10  ┆ 1765332619 ┆ LD783  ┆ SLS30I623 ┆ 0.6482   ┆ 6         ┆ 1           ┆ GPS         │\n",
-       "│ 08:00:00    ┆            ┆        ┆           ┆          ┆           ┆             ┆             │\n",
-       "│ 2025-12-10  ┆ 1765332621 ┆ LD783  ┆ SLS30I623 ┆ 0.56486  ┆ 7         ┆ 1           ┆ GPS         │\n",
-       "│ 08:00:00    ┆            ┆        ┆           ┆          ┆           ┆             ┆             │\n",
-       "│ 2025-12-10  ┆ 1765332634 ┆ LD783  ┆ SLS30I623 ┆ 1.263064 ┆ 7         ┆ 1           ┆ GPS         │\n",
-       "│ 08:00:00    ┆            ┆        ┆           ┆          ┆           ┆             ┆             │\n",
-       "│ 2025-12-10  ┆ 1765332635 ┆ LD783  ┆ SLS30I623 ┆ 1.263064 ┆ 7         ┆ 1           ┆ GPS         │\n",
-       "│ 08:00:00    ┆            ┆        ┆           ┆          ┆           ┆             ┆             │\n",
-       "│ …           ┆ …          ┆ …      ┆ …         ┆ …        ┆ …         ┆ …           ┆ …           │\n",
-       "│ 2025-12-14  ┆ 1765673940 ┆ LD783  ┆ SLS30I623 ┆ 3.765116 ┆ 9         ┆ 4           ┆ CANBus      │\n",
-       "│ 08:00:00    ┆            ┆        ┆           ┆          ┆           ┆             ┆             │\n",
-       "│ 2025-12-14  ┆ 1765673941 ┆ LD783  ┆ SLS30I623 ┆ 3.765116 ┆ 9         ┆ 4           ┆ CANBus      │\n",
-       "│ 08:00:00    ┆            ┆        ┆           ┆          ┆           ┆             ┆             │\n",
-       "│ 2025-12-14  ┆ 1765673942 ┆ LD783  ┆ SLS30I623 ┆ 3.679924 ┆ 9         ┆ 3           ┆ CANBus      │\n",
-       "│ 08:00:00    ┆            ┆        ┆           ┆          ┆           ┆             ┆             │\n",
-       "│ 2025-12-14  ┆ 1765673943 ┆ LD783  ┆ SLS30I623 ┆ 3.226184 ┆ 9         ┆ 2           ┆ CANBus      │\n",
-       "│ 08:00:00    ┆            ┆        ┆           ┆          ┆           ┆             ┆             │\n",
-       "│ 2025-12-14  ┆ 1765673944 ┆ LD783  ┆ SLS30I623 ┆ 1.627908 ┆ 9         ┆ 2           ┆ CANBus      │\n",
-       "│ 08:00:00    ┆            ┆        ┆           ┆          ┆           ┆             ┆             │\n",
-       "└─────────────┴────────────┴────────┴───────────┴──────────┴───────────┴─────────────┴─────────────┘"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df"
    ]
@@ -316,18 +238,7 @@
    "execution_count": null,
    "id": "3ea95293",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"['s3://smartdbucket/datalog/BRCG/SLS30I614/2025121212/2025121212.txt.gz', 'datalog/BRCG/SLS30I614/2025121212/2025121212.txt.gz']\""
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "bucket_name = \"smartdbucket\"\n",
     "s3key_list_string = (\n",
@@ -341,41 +252,7 @@
    "execution_count": null,
    "id": "882be9a6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['00',\n",
-       " '01',\n",
-       " '02',\n",
-       " '03',\n",
-       " '04',\n",
-       " '05',\n",
-       " '06',\n",
-       " '07',\n",
-       " '08',\n",
-       " '09',\n",
-       " '10',\n",
-       " '11',\n",
-       " '12',\n",
-       " '13',\n",
-       " '14',\n",
-       " '15',\n",
-       " '16',\n",
-       " '17',\n",
-       " '18',\n",
-       " '19',\n",
-       " '20',\n",
-       " '21',\n",
-       " '22',\n",
-       " '23']"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "r = list(range(0, 24))\n",
     "r = [f\"{i:02d}\" for i in r]\n",
@@ -397,16 +274,7 @@
    "execution_count": null,
    "id": "b6261943",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "KeyCount: 10\n",
-      "Contents: [{'Key': 'datalog/BRCB/SDLIR002/2025073002/2025073002.txt.gz', 'LastModified': datetime.datetime(2025, 8, 6, 10, 1, 10, tzinfo=tzutc()), 'ETag': '\"e042e6cb244ef3fe324fc34527cf355a\"', 'ChecksumAlgorithm': ['CRC32'], 'ChecksumType': 'FULL_OBJECT', 'Size': 353587, 'StorageClass': 'STANDARD'}, {'Key': 'datalog/BRCB/SDLIR002/2025073003/2025073003.txt.gz', 'LastModified': datetime.datetime(2025, 8, 6, 10, 1, 12, tzinfo=tzutc()), 'ETag': '\"b828e44ec0fcd26098555011b49381f9\"', 'ChecksumAlgorithm': ['CRC32'], 'ChecksumType': 'FULL_OBJECT', 'Size': 192000, 'StorageClass': 'STANDARD'}, {'Key': 'datalog/BRCB/SDLIR002/2025073006/2025073006.txt.gz', 'LastModified': datetime.datetime(2025, 8, 6, 10, 1, 17, tzinfo=tzutc()), 'ETag': '\"c2768535c18a4123e2c03846146b6147\"', 'ChecksumAlgorithm': ['CRC32'], 'ChecksumType': 'FULL_OBJECT', 'Size': 224416, 'StorageClass': 'STANDARD'}, {'Key': 'datalog/BRCB/SDLIR002/2025073007/2025073007.txt.gz', 'LastModified': datetime.datetime(2025, 8, 6, 10, 1, 21, tzinfo=tzutc()), 'ETag': '\"81047664ee24f7da4a9e82ea1171e0d3\"', 'ChecksumAlgorithm': ['CRC32'], 'ChecksumType': 'FULL_OBJECT', 'Size': 241710, 'StorageClass': 'STANDARD'}, {'Key': 'datalog/BRCB/SDLIR002/2025073008/2025073008.txt.gz', 'LastModified': datetime.datetime(2025, 8, 6, 10, 1, 25, tzinfo=tzutc()), 'ETag': '\"3b6d56a8e0c8ad7fb34d0ed1c3ed2d71\"', 'ChecksumAlgorithm': ['CRC32'], 'ChecksumType': 'FULL_OBJECT', 'Size': 96407, 'StorageClass': 'STANDARD'}, {'Key': 'datalog/BRCB/SDLIR002/2025073009/2025073009.txt.gz', 'LastModified': datetime.datetime(2025, 8, 6, 10, 1, 27, tzinfo=tzutc()), 'ETag': '\"8c1f5c3cfabd0742882c23cc2d77c527\"', 'ChecksumAlgorithm': ['CRC32'], 'ChecksumType': 'FULL_OBJECT', 'Size': 37112, 'StorageClass': 'STANDARD'}, {'Key': 'datalog/BRCB/SDLIR002/2025073012/2025073012.txt.gz', 'LastModified': datetime.datetime(2025, 8, 6, 10, 1, 29, tzinfo=tzutc()), 'ETag': '\"052969da5c466f1168a715f689cd68c0\"', 'ChecksumAlgorithm': ['CRC32'], 'ChecksumType': 'FULL_OBJECT', 'Size': 312536, 'StorageClass': 'STANDARD'}, {'Key': 'datalog/BRCB/SDLIR002/2025073013/2025073013.txt.gz', 'LastModified': datetime.datetime(2025, 8, 6, 10, 1, 33, tzinfo=tzutc()), 'ETag': '\"36e9c2f916997132b20f0d9a382cf581\"', 'ChecksumAlgorithm': ['CRC32'], 'ChecksumType': 'FULL_OBJECT', 'Size': 329176, 'StorageClass': 'STANDARD'}, {'Key': 'datalog/BRCB/SDLIR002/2025073014/2025073014.txt.gz', 'LastModified': datetime.datetime(2025, 8, 6, 10, 1, 37, tzinfo=tzutc()), 'ETag': '\"dfacb81c5b17f3b4421ffee5663e7588\"', 'ChecksumAlgorithm': ['CRC32'], 'ChecksumType': 'FULL_OBJECT', 'Size': 143014, 'StorageClass': 'STANDARD'}, {'Key': 'datalog/BRCB/SDLIR002/2025073101/2025073101.txt.gz', 'LastModified': datetime.datetime(2025, 8, 6, 10, 1, 41, tzinfo=tzutc()), 'ETag': '\"7bf86d975b2244e95b656bed67f41341\"', 'ChecksumAlgorithm': ['CRC32'], 'ChecksumType': 'FULL_OBJECT', 'Size': 287882, 'StorageClass': 'STANDARD'}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "s3 = boto3.client(\n",
     "    \"s3\",\n",
@@ -415,7 +283,7 @@
     "    region_name=storage_options[\"aws_region\"],\n",
     ")\n",
     "response = s3.list_objects_v2(\n",
-    "    Bucket=\"smartdbucket\", Prefix=\"datalog/BRCB/SDLIR002/\", MaxKeys=10\n",
+    "    Bucket=\"smartdbucket\", Prefix=\"datalogparquet/datalog/\", MaxKeys=10\n",
     ")\n",
     "\n",
     "print(f\"KeyCount: {response.get('KeyCount', 0)}\")\n",
